--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^14.3.2",
+		"ejs": "^3.1.6",
 		"express": "~4.16.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.1.7",
